--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="right_arrow_height">16dp</dimen>
     <dimen name="right_arrow_width">12dp</dimen>
     <dimen name="item_height">44dp</dimen>
+    <dimen name="enterprise_detail_aptitude_item_vertical_padding">6dp</dimen>
 </resources>
