--- a/app/src/main/res/layout/aptitude_select_initial_include.xml
+++ b/app/src/main/res/layout/aptitude_select_initial_include.xml
@@ -2,7 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/txt_aptitude_select_initial_include"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_weight="1"
     tools:text="A" />
