--- a/app/src/main/res/layout/activity_query.xml
+++ b/app/src/main/res/layout/activity_query.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/gray_divide"
+    android:orientation="vertical"
     tools:context="com.anjile.shineourlove.rxjavaapplication.activity.QueryActivity">
 
     <include
@@ -71,10 +71,10 @@
         android:background="@color/gray_line" />
 
     <LinearLayout
-        android:background="@color/white"
         android:id="@+id/ll_query_company_query"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical"
         android:visibility="visible">
 
@@ -90,18 +90,22 @@
                 android:layout_centerVertical="true"
                 android:text="@string/enterprise_name"
                 android:textColor="@color/black_word"
-                android:textSize="@dimen/item_text_size" />
+                android:textSize="@dimen/item_text_size"
+                android:id="@+id/textView" />
 
-            <EditText
+            <com.anjile.shineourlove.rxjavaapplication.view.DeleteEditTextView
                 android:id="@+id/edt_query_enterprise_enterprise_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
                 android:background="@color/white"
                 android:hint="@string/please_enter_a_enterprise_name_to_query"
                 android:textColorHint="@color/gray_word_hint"
-                android:textSize="@dimen/item_text_size" />
+                android:textSize="@dimen/item_text_size"
+                tools:text="intel"
+                android:textAlignment="textEnd"
+                android:layout_alignBaseline="@+id/textView"
+                android:layout_alignBottom="@+id/textView"
+                android:layout_alignParentEnd="true" />
         </RelativeLayout>
 
         <include layout="@layout/item_divide_line" />
@@ -117,6 +121,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:text="@string/select_province_and_city"
                 android:textColor="@color/black_word"
                 android:textSize="@dimen/item_text_size" />
@@ -126,11 +131,14 @@
                 android:layout_width="@dimen/right_arrow_width"
                 android:layout_height="@dimen/right_arrow_height"
                 android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
                 android:src="@drawable/arrow_right" />
 
             <TextView
+                android:id="@+id/txt_query_area_province"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginEnd="8dp"
                 android:layout_toLeftOf="@+id/img_query_area_more"
                 android:text="@string/please_select_area_of_the_enterprise"
@@ -202,6 +210,7 @@
             android:paddingRight="@dimen/item_margin_right">
 
             <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -209,12 +218,13 @@
                 android:textColor="@color/black_word"
                 android:textSize="@dimen/item_text_size" />
 
-            <EditText
+            <com.anjile.shineourlove.rxjavaapplication.view.DeleteEditTextView
                 android:id="@+id/edt_query_enterprise_legal_person"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:textAlignment="textEnd"
                 android:background="@color/white"
                 android:hint="@string/please_enter_the_legal_person_name_to_query"
                 android:textColorHint="@color/gray_word_hint"
@@ -234,6 +244,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:text="@string/qualification_search_condition"
                 android:textColor="@color/black_word"
                 android:textSize="@dimen/item_text_size" />
@@ -243,11 +254,14 @@
                 android:layout_width="@dimen/right_arrow_width"
                 android:layout_height="@dimen/right_arrow_height"
                 android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
                 android:src="@drawable/arrow_right" />
 
             <TextView
+                android:id="@+id/txt_query_enterprise_aptitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginEnd="8dp"
                 android:layout_toLeftOf="@+id/img_query_aptitude"
                 android:text="@string/click_setting"
@@ -268,6 +282,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:text="@string/performance_search_condition"
                 android:textColor="@color/black_word"
                 android:textSize="@dimen/item_text_size" />
@@ -277,11 +292,13 @@
                 android:layout_width="@dimen/right_arrow_width"
                 android:layout_height="@dimen/right_arrow_height"
                 android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
                 android:src="@drawable/arrow_right" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginEnd="8dp"
                 android:layout_toLeftOf="@+id/img_query_area_performance"
                 android:text="@string/click_setting"
@@ -302,6 +319,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:text="@string/person_search_condition"
                 android:textColor="@color/black_word"
                 android:textSize="@dimen/item_text_size" />
@@ -311,11 +329,13 @@
                 android:layout_width="@dimen/right_arrow_width"
                 android:layout_height="@dimen/right_arrow_height"
                 android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
                 android:src="@drawable/arrow_right" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginEnd="8dp"
                 android:layout_toLeftOf="@+id/img_query_personal"
                 android:text="@string/click_setting"
@@ -323,38 +343,41 @@
                 android:textSize="@dimen/item_text_size" />
         </RelativeLayout>
 
-         <include layout="@layout/item_divide_line" />
+        <include layout="@layout/item_divide_line" />
 
-         <RelativeLayout
-             android:layout_width="match_parent"
-             android:layout_height="@dimen/item_height"
-             android:gravity="center_vertical"
-             android:paddingLeft="@dimen/item_margin_left"
-             android:paddingRight="@dimen/item_margin_right">
+       <!-- <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/item_height"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/item_margin_left"
+            android:paddingRight="@dimen/item_margin_right">
 
-             <TextView
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="@string/credit_search_condition"
-                 android:textColor="@color/black_word"
-                 android:textSize="@dimen/item_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/credit_search_condition"
+                android:textColor="@color/black_word"
+                android:textSize="@dimen/item_text_size" />
 
-             <ImageView
-                 android:id="@+id/img_query_reputation"
-                 android:layout_width="@dimen/right_arrow_width"
-                 android:layout_height="@dimen/right_arrow_height"
-                 android:layout_alignParentEnd="true"
-                 android:src="@drawable/arrow_right" />
+            <ImageView
+                android:id="@+id/img_query_reputation"
+                android:layout_width="@dimen/right_arrow_width"
+                android:layout_height="@dimen/right_arrow_height"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/arrow_right" />
 
-             <TextView
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_marginEnd="8dp"
-                 android:layout_toLeftOf="@+id/img_query_reputation"
-                 android:text="@string/click_setting"
-                 android:textColor="@color/gray_word_hint"
-                 android:textSize="@dimen/item_text_size" />
-         </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="8dp"
+                android:layout_toLeftOf="@+id/img_query_reputation"
+                android:text="@string/click_setting"
+                android:textColor="@color/gray_word_hint"
+                android:textSize="@dimen/item_text_size" />
+        </RelativeLayout>-->
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -402,6 +425,7 @@
                 android:textSize="@dimen/item_text_size" />
 
             <EditText
+                android:textAlignment="textEnd"
                 android:id="@+id/edt_query_performance_project_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -434,6 +458,7 @@
                 android:textSize="@dimen/item_text_size" />
 
             <EditText
+                android:textAlignment="textEnd"
                 android:id="@+id/edt_query_performance_enterprise_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -473,6 +498,7 @@
                 android:layout_centerVertical="true"
                 android:background="@color/white"
                 android:hint="输入建造师名字"
+                android:textAlignment="textEnd"
                 android:textColorHint="@color/gray_word_hint"
                 android:textSize="@dimen/item_text_size" />
         </RelativeLayout>
@@ -494,6 +520,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:text="项目所在地"
                 android:textColor="@color/black_word"
                 android:textSize="@dimen/item_text_size" />
@@ -503,11 +530,13 @@
                 android:layout_width="@dimen/right_arrow_width"
                 android:layout_height="@dimen/right_arrow_height"
                 android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
                 android:src="@drawable/arrow_right" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginEnd="8dp"
                 android:layout_toLeftOf="@+id/img_query_location"
                 android:text="请选择省市"
