--- a/app/src/main/res/layout/aptitude_select_initial_include.xml
+++ b/app/src/main/res/layout/aptitude_select_initial_include.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/txt_aptitude_select_initial_include"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:text="A" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/txt_aptitude_select_initial_include"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textColor="@color/blue_word"
+        android:textSize="@dimen/item_text_size"
+        android:textStyle="bold"
+        tools:text="A" />
+
+</LinearLayout>
