--- a/app/src/main/res/layout/personal_setting_adapter.xml
+++ b/app/src/main/res/layout/personal_setting_adapter.xml
@@ -1,23 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray_divide"
-    android:orientation="vertical"
-    tools:context="com.anjile.shineourlove.rxjavaapplication.activity.PersonalSearchConditionActivity">
-
-    <include
-        layout="@layout/include_top_status_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/ll_person_search_condition_register"
+        android:id="@+id/ll_personal_setting_adapter_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:layout_height="@dimen/item_height"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -26,119 +18,140 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/item_margin_left"
             android:layout_weight="1"
-            android:paddingBottom="@dimen/item_text_vertical_margin"
-            android:paddingTop="@dimen/item_text_vertical_margin"
-            android:text="@string/register_class_person"
+            android:text="专业名称"
             android:textColor="@color/black_word"
             android:textSize="@dimen/item_text_size" />
 
         <TextView
-            android:id="@+id/txt_person_search_condition_register"
+            android:id="@+id/txt_personal_setting_adapter_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/please_choose"
-            android:textColor="@color/gray_word"
-            android:textColorHint="@color/gray_word_hint"
-            android:textSize="@dimen/item_text_size" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="16dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="@dimen/item_margin_right"
-            android:src="@drawable/arrow_right" />
-    </LinearLayout>
-
-    <include layout="@layout/item_divide_line" />
-
-    <LinearLayout
-        android:id="@+id/ll_person_search_condition_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/item_margin_left"
-            android:layout_weight="1"
-            android:paddingBottom="@dimen/item_text_vertical_margin"
-            android:paddingTop="@dimen/item_text_vertical_margin"
-            android:text="@string/title_class_person"
-            android:textColor="@color/black_word"
-            android:textSize="@dimen/item_text_size" />
-
-        <TextView
-            android:id="@+id/txt_person_search_condition_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/please_choose"
-            android:textColor="@color/gray_word"
-            android:textColorHint="@color/gray_word_hint"
-            android:textSize="@dimen/item_text_size" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="16dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="@dimen/item_margin_right"
-            android:src="@drawable/arrow_right" />
-    </LinearLayout>
-
-    <include layout="@layout/item_divide_line" />
-
-    <LinearLayout
-        android:id="@+id/ll_person_search_condition_field_management"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/item_margin_left"
-            android:layout_weight="1"
-            android:paddingBottom="@dimen/item_text_vertical_margin"
-            android:paddingTop="@dimen/item_text_vertical_margin"
-            android:text="@string/field_management_class_person"
-            android:textColor="@color/black_word"
-            android:textSize="@dimen/item_text_size" />
-
-        <TextView
-            android:id="@+id/txt_person_search_condition_field_management"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
             android:hint="@string/please_choose"
             android:textColor="@color/gray_word"
             android:textColorHint="@color/gray_word_hint"
             android:textSize="@dimen/item_text_size"
-            tools:text="@string/please_choose" />
+            tools:text="安装造价师" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="16dp"
-            android:layout_marginLeft="8dp"
+            android:layout_width="@dimen/right_arrow_width"
+            android:layout_height="@dimen/right_arrow_height"
             android:layout_marginRight="@dimen/item_margin_right"
             android:src="@drawable/arrow_right" />
     </LinearLayout>
 
-    <android.support.percent.PercentRelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <include layout="@layout/item_divide_line" />
 
-        <Button
-            android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/ll_personal_setting_adapter_grade"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/item_height"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/item_margin_left"
+            android:layout_weight="1"
+            android:text="等级"
+            android:textColor="@color/black_word"
+            android:textSize="@dimen/item_text_size" />
+
+        <TextView
+            android:id="@+id/txt_personal_setting_adapter_grade"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/item_margin_left"
+            android:layout_marginRight="8dp"
+            android:hint="@string/please_choose"
+            android:textColor="@color/gray_word"
+            android:textColorHint="@color/gray_word_hint"
+            android:textSize="@dimen/item_text_size"
+            tools:text="安装造价师" />
+
+        <ImageView
+            android:layout_width="@dimen/right_arrow_width"
+            android:layout_height="@dimen/right_arrow_height"
             android:layout_marginRight="@dimen/item_margin_right"
-            android:background="@drawable/round_radius_50_blue"
-            android:text="@string/confirm"
-            android:textColor="@color/white"
-            android:textSize="@dimen/btn_text_size"
-            app:layout_marginTopPercent="25%" />
-    </android.support.percent.PercentRelativeLayout>
+            android:src="@drawable/arrow_right" />
+    </LinearLayout>
+
+    <include layout="@layout/item_divide_line" />
+
+    <LinearLayout
+        android:id="@+id/ll_personal_setting_adapter_number"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/item_height"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/item_margin_left"
+            android:layout_weight="1"
+            android:text="数量"
+            android:textColor="@color/black_word"
+            android:textSize="@dimen/item_text_size" />
+
+        <TextView
+            android:id="@+id/txt_personal_setting_adapter_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/item_margin_left"
+            android:layout_marginRight="8dp"
+            android:hint="@string/please_choose"
+            android:textColor="@color/gray_word"
+            android:textColorHint="@color/gray_word_hint"
+            android:textSize="@dimen/item_text_size"
+            tools:text="安装造价师" />
+
+        <ImageView
+            android:layout_width="@dimen/right_arrow_width"
+            android:layout_height="@dimen/right_arrow_height"
+            android:layout_marginRight="@dimen/item_margin_right"
+            android:src="@drawable/arrow_right" />
+    </LinearLayout>
+
+    <include layout="@layout/item_divide_line" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/item_height"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_personal_setting_adapter_delete"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/item_margin_left"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="删除该条"
+            android:textColor="@color/black_word"
+            android:textSize="@dimen/item_text_size" />
+
+        <TextView
+            android:id="@+id/txt_personal_setting_adapter_clear"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/item_margin_left"
+            android:layout_marginRight="@dimen/item_margin_right"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:hint="@string/please_choose"
+            android:text="清空数据"
+            android:textColor="@color/black_word"
+            android:textColorHint="@color/gray_word_hint"
+            android:textSize="@dimen/item_text_size" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/txt_personal_setting_adapter_line"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:background="@color/gray_divide" />
 </LinearLayout>
