--- a/app/src/main/res/layout/activity_query.xml
+++ b/app/src/main/res/layout/activity_query.xml
@@ -85,27 +85,27 @@
             android:paddingRight="@dimen/item_margin_right">
 
             <TextView
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="@string/enterprise_name"
                 android:textColor="@color/black_word"
-                android:textSize="@dimen/item_text_size"
-                android:id="@+id/textView" />
+                android:textSize="@dimen/item_text_size" />
 
             <com.anjile.shineourlove.rxjavaapplication.view.DeleteEditTextView
                 android:id="@+id/edt_query_enterprise_enterprise_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:hint="@string/please_enter_a_enterprise_name_to_query"
-                android:textColorHint="@color/gray_word_hint"
-                android:textSize="@dimen/item_text_size"
-                tools:text="intel"
-                android:textAlignment="textEnd"
                 android:layout_alignBaseline="@+id/textView"
                 android:layout_alignBottom="@+id/textView"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:background="@color/white"
+                android:hint="@string/please_enter_a_enterprise_name_to_query"
+                android:textAlignment="textEnd"
+                android:textColorHint="@color/gray_word_hint"
+                android:textSize="@dimen/item_text_size"
+                tools:text="intel" />
         </RelativeLayout>
 
         <include layout="@layout/item_divide_line" />
@@ -224,9 +224,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:textAlignment="textEnd"
                 android:background="@color/white"
                 android:hint="@string/please_enter_the_legal_person_name_to_query"
+                android:textAlignment="textEnd"
                 android:textColorHint="@color/gray_word_hint"
                 android:textSize="@dimen/item_text_size" />
         </RelativeLayout>
@@ -296,6 +296,7 @@
                 android:src="@drawable/arrow_right" />
 
             <TextView
+                android:id="@+id/txt_query_enterprise_performance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -333,6 +334,7 @@
                 android:src="@drawable/arrow_right" />
 
             <TextView
+                android:id="@+id/txt_query_enterprise_person"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -345,39 +347,39 @@
 
         <include layout="@layout/item_divide_line" />
 
-       <!-- <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/item_height"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/item_margin_left"
-            android:paddingRight="@dimen/item_margin_right">
+        <!-- <RelativeLayout
+             android:layout_width="match_parent"
+             android:layout_height="@dimen/item_height"
+             android:gravity="center_vertical"
+             android:paddingLeft="@dimen/item_margin_left"
+             android:paddingRight="@dimen/item_margin_right">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="@string/credit_search_condition"
-                android:textColor="@color/black_word"
-                android:textSize="@dimen/item_text_size" />
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_centerVertical="true"
+                 android:text="@string/credit_search_condition"
+                 android:textColor="@color/black_word"
+                 android:textSize="@dimen/item_text_size" />
 
-            <ImageView
-                android:id="@+id/img_query_reputation"
-                android:layout_width="@dimen/right_arrow_width"
-                android:layout_height="@dimen/right_arrow_height"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/arrow_right" />
+             <ImageView
+                 android:id="@+id/img_query_reputation"
+                 android:layout_width="@dimen/right_arrow_width"
+                 android:layout_height="@dimen/right_arrow_height"
+                 android:layout_alignParentEnd="true"
+                 android:layout_centerVertical="true"
+                 android:src="@drawable/arrow_right" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="8dp"
-                android:layout_toLeftOf="@+id/img_query_reputation"
-                android:text="@string/click_setting"
-                android:textColor="@color/gray_word_hint"
-                android:textSize="@dimen/item_text_size" />
-        </RelativeLayout>-->
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_centerVertical="true"
+                 android:layout_marginEnd="8dp"
+                 android:layout_toLeftOf="@+id/img_query_reputation"
+                 android:text="@string/click_setting"
+                 android:textColor="@color/gray_word_hint"
+                 android:textSize="@dimen/item_text_size" />
+         </RelativeLayout>-->
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -425,7 +427,6 @@
                 android:textSize="@dimen/item_text_size" />
 
             <EditText
-                android:textAlignment="textEnd"
                 android:id="@+id/edt_query_performance_project_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -433,6 +434,7 @@
                 android:layout_centerVertical="true"
                 android:background="@color/white"
                 android:hint="请输入项目名称"
+                android:textAlignment="textEnd"
                 android:textColorHint="@color/gray_word_hint"
                 android:textSize="@dimen/item_text_size" />
         </RelativeLayout>
@@ -458,7 +460,6 @@
                 android:textSize="@dimen/item_text_size" />
 
             <EditText
-                android:textAlignment="textEnd"
                 android:id="@+id/edt_query_performance_enterprise_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -466,6 +467,7 @@
                 android:layout_centerVertical="true"
                 android:background="@color/white"
                 android:hint="请输入企业名称"
+                android:textAlignment="textEnd"
                 android:textColorHint="@color/gray_word_hint"
                 android:textSize="@dimen/item_text_size" />
         </RelativeLayout>
