--- a/app/src/main/res/layout/activity_personal_search_condition.xml
+++ b/app/src/main/res/layout/activity_personal_search_condition.xml
@@ -131,6 +131,7 @@
         android:layout_height="match_parent">
 
         <Button
+            android:id="@+id/btn_person_search_condition_confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/item_margin_left"
