--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -91,7 +91,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:id="@+id/ll_fragment_home_talent_pool"
+                android:id="@+id/ll_fragment_home_advanced_query"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -101,6 +101,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ssdk_oks_classic_facebook" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="高级查询"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_fragment_home_talent_pool"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ssdk_oks_classic_alipay" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -119,31 +138,12 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ssdk_oks_classic_alipay" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="预算方案"
-                    android:textAlignment="center" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_fragment_home_material_shop"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:src="@drawable/ssdk_oks_classic_googleplus" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="材料选购"
+                    android:text="预算方案"
                     android:textAlignment="center" />
             </LinearLayout>
         </LinearLayout>
@@ -159,7 +159,7 @@
             android:paddingBottom="10dp">
 
             <LinearLayout
-                android:id="@+id/ll_fragment_home_credit"
+                android:id="@+id/ll_fragment_home_vip"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -173,12 +173,12 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="信誉值"
+                    android:text="VIP"
                     android:textAlignment="center" />
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ll_fragment_home_vip"
+                android:id="@+id/ll_fragment_home_credit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -192,12 +192,12 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="VIP"
+                    android:text="信誉值"
                     android:textAlignment="center" />
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ll_fragment_home_query"
+                android:id="@+id/ll_fragment_home_material_choose"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -211,7 +211,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="查询"
+                    android:text="材料选购"
                     android:textAlignment="center" />
             </LinearLayout>
         </LinearLayout>
