--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -79,7 +79,7 @@
         <com.bigkoo.convenientbanner.ConvenientBanner
             android:id="@+id/cb_fragment_home"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="243dp"
             android:layout_below="@+id/rl_fragment_home_top" />
 
         <LinearLayout
@@ -87,7 +87,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/cb_fragment_home"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -100,13 +100,15 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ssdk_oks_classic_facebook" />
+                    android:src="@drawable/search" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:text="高级查询"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textSize="@dimen/main_class_text_size" />
             </LinearLayout>
 
             <LinearLayout
@@ -119,13 +121,16 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ssdk_oks_classic_alipay" />
+                    android:src="@drawable/talent_pool" />
 
                 <TextView
+                    android:id="@+id/textView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:text="人才库"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textSize="@dimen/main_class_text_size" />
             </LinearLayout>
 
             <LinearLayout
@@ -138,14 +143,17 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ssdk_oks_classic_googleplus" />
+                    android:src="@drawable/budget_program" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:text="预算方案"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textSize="@dimen/main_class_text_size" />
             </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -153,7 +161,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/ll_fragment_home_menu_one"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="30dp"
             android:baselineAligned="true"
             android:orientation="horizontal"
             android:paddingBottom="10dp">
@@ -168,13 +176,15 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ssdk_oks_classic_wechat" />
+                    android:src="@drawable/vip_icon" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:text="VIP"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textSize="@dimen/main_class_text_size" />
             </LinearLayout>
 
             <LinearLayout
@@ -187,13 +197,15 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ssdk_oks_classic_linkedin" />
+                    android:src="@drawable/credit_icon" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:text="信誉值"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textSize="@dimen/main_class_text_size" />
             </LinearLayout>
 
             <LinearLayout
@@ -206,13 +218,15 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ssdk_oks_classic_qq" />
+                    android:src="@drawable/matetials_shop" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:text="材料选购"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textSize="@dimen/main_class_text_size" />
             </LinearLayout>
         </LinearLayout>
 
