--- a/app/src/main/res/layout/fragment_person_layout.xml
+++ b/app/src/main/res/layout/fragment_person_layout.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5"
-        android:background="@color/gray_word_hint"
+        android:background="@drawable/person_background"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingTop="10dp">
