--- a/app/src/main/res/layout/activity_account_login.xml
+++ b/app/src/main/res/layout/activity_account_login.xml
@@ -11,12 +11,13 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ssdk_oks_classic_qzone" />
+        android:src="@drawable/back"
+        android:visibility="invisible"/>
 
     <com.anjile.shineourlove.rxjavaapplication.view.RoundImageView
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="6dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/test1" />
 
     <EditText
@@ -31,12 +32,13 @@
         android:hint="请输入手机号"
         android:inputType="phone"
         android:maxLength="11"
+        android:textColor="@color/black_word"
         android:textColorHint="@color/gray_word_hint"
         android:textSize="17sp" />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="1.5dp"
+        android:layout_height="2dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="4dp"
@@ -60,6 +62,7 @@
             android:hint="请输入验证码"
             android:inputType="number"
             android:maxLength="6"
+            android:textColor="@color/black_word"
             android:textColorHint="@color/gray_word_hint"
             android:textSize="17sp" />
 
@@ -77,7 +80,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="1.5dp"
+        android:layout_height="2dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="4dp"
@@ -87,12 +90,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.09"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <CheckBox
+            android:id="@+id/cb_txt_account_login_agreement_and_terms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
+            android:text="      "
+            android:button="@drawable/agreement_check_selector"
             android:textColor="@color/gray_word_hint"
             android:textSize="13sp" />
 
@@ -104,7 +111,7 @@
             android:text="我已阅读并同意建讯之家《用户服务协议》和《隐私条款》" />
     </LinearLayout>
 
-    <TextView
+    <Button
         android:id="@+id/txt_account_login_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -113,9 +120,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/round_radius_50_blue"
         android:gravity="center"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
         android:text="立即登录"
         android:textColor="@color/white"
-        android:textSize="19sp" />
+        android:textSize="@dimen/btn_text_size" />
 </LinearLayout>
